redo scripts for better extensibility (#120)
* redo scripts for better extensibility

* try to clear a vulnerability